SBVTestSuite/TestSuite/CompileTests/PCase/PCase33.stderr
PCase33.hs:14:14: error: [GHC-39584]
    " PCase33.hs:17:9: pCase: Wildcard makes the remaining matches redundant:
        PCase33.hs:18:9-13: Var _
        PCase33.hs:19:9-15: Add _ _
        PCase33.hs:20:9-17: Let _ _ _

    " In the quasi-quotation:
        [pCase|Expr e of
        Zero  -> undefined
        Num _ -> undefined
        _     -> undefined
        Var _ -> undefined
        Add _ _ -> undefined
        Let _ _ _ -> undefined
      |]
   |
14 | t e = [pCase|Expr e of
   |              ^^^^^^^^^...

